--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-ok
+All the files for the project
+File '5GetSQLDB.py' is used to retrive the information env information once is store in the Database
